--- a/index.html
+++ b/index.html
@@ -1,59 +1,58 @@
-<!DOCTYPE html>
+<!-- index.html -->
+<!doctype html>
 <html lang="hi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ZNews Style Scroll Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f2f2f2;
-    }
-    .news {
-      background: white;
-      margin: 15px auto;
-      padding: 20px;
-      width: 90%;
-      max-width: 600px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .loader {
-      text-align: center;
-      font-size: 18px;
-      padding: 20px;
-    }
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Marathi Crime Files - Home</title>
+<link rel="stylesheet" href="style.css">
+<script type="module" defer src="home.js"></script>
 </head>
 <body>
-  <h2 style="text-align:center; padding:15px; background:#d62828; color:white;">📰 ZNews Scroll Page</h2>
-  <div id="container"></div>
-  <div class="loader" id="loader">Loading more news...</div>
 
-  <script>
-    let page = 1;
-    const container = document.getElementById("container");
-    const loader = document.getElementById("loader");
+<!-- Top banner (slider) -->
+<div id="bannerWrap" class="header-top-banner">
+  <!-- slides injected by home.js -->
+  <div id="bannerDots" class="banner-dots"></div>
+</div>
 
-    function loadNews() {
-      for(let i=0; i<5; i++){
-        const div = document.createElement("div");
-        div.className = "news";
-        div.innerHTML = `<h3>News Title ${page}-${i+1}</h3>
-        <p>यह न्यूज़ ${page} के पेज की है — जैसे ZNews में नीचे स्क्रोल करते हैं वैसे ही।</p>`;
-        container.appendChild(div);
-      }
-      page++;
-    }
+<!-- Header bar -->
+<header class="header-bar">
+  <div style="display:flex;align-items:center;gap:10px">
+    <img src="https://i.postimg.cc/6Q5TYPVR/Whats-App-Image-2025-10-26-at-2-42-16-PM.jpg" alt="logo" class="logo-img">
+    <h1 style="margin:0;font-size:18px">Marathi Crime Files</h1>
+  </div>
 
-    loadNews();
+  <div style="display:flex;align-items:center;gap:12px">
+    <nav class="menu">
+      <a href="index.html">Home</a>
+      <a href="crime.html">Crime</a>
+      <a href="lawarish.html">Lawarish</a>
+      <a href="gumshuda.html">Gumshuda</a>
+      <a href="story.html">Story</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <button id="loginBtn" class="auth-btn">Login</button>
+    <button id="logoutBtn" class="auth-btn" style="display:none;background:#ef4444;color:#fff">Logout</button>
+  </div>
+</header>
 
-    window.addEventListener("scroll", () => {
-      if(window.innerHeight + window.scrollY >= document.body.offsetHeight - 100) {
-        loadNews();
-      }
-    });
-  </script>
+<!-- tickers -->
+<div class="container ticker-wrap">
+  <div class="breaking"><span class="tick" id="breakingTick">Loading breaking...</span></div>
+  <div class="notice"><span class="tick" id="noticeTick">Loading notice...</span></div>
+</div>
+
+<!-- main feed -->
+<main class="container">
+  <div id="posts" class="posts-grid"></div>
+  <div id="loader" class="loader">Loading more news...</div>
+</main>
+
+<!-- Modal for full post -->
+<div id="modal" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);align-items:center;justify-content:center;padding:20px">
+  <div id="modalContent" style="background:white;padding:14px;border-radius:8px;max-width:700px;max-height:90vh;overflow:auto"></div>
+</div>
+
 </body>
 </html>
