--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 <body>
 
 <!-- Top banner (slider) -->
-<div id="bannerWrap" class="header-top-banner">
-  <!-- slides injected by home.js -->
-  <div id="bannerDots" class="banner-dots"></div>
-</div>
+<div id="bannerWrap" class="header-top-banner"><div id="bannerDots" class="banner-dots"></div></div>
 
 <!-- Header bar -->
 <header class="header-bar">
